--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!--Security Tags-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+        </dependency>
+
         <!--Jasper-->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
